--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -56,7 +56,10 @@ input::-ms-clear {
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
-
+article {
+  @include ls(0.36);
+	line-height: 155.556%;
+}
 @import "ui";
 
 @import "grid";
